2009-08-25 Borut Razem <borut.razem AT siol.net>

	* as/hc08/Makefile.in, as/mcs51/Makefile.in, as/z80/Makefile.in:
	  removed duplicated asdata.c
	* as/hc08/aslist.c, as/hc08/asmain.c, as/hc08/asout.c,
	  as/mcs51/aslist.c, as/mcs51/asmain.c, as/mcs51/asout.c:
	  fixed copy&paste problem in S_ORG
	* as/asxxsrc/asmain.c, as/hc08/Makefile.in, as/mcs51/Makefile.in,
	   as/z80/Makefile.in: as/mcs51/asmain.c moved to s/asxxsrc/asmain.c
	* as/hc08/asmain.c, as/z80/asmain.c: removed

2009-08-24 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asdata.c, as/asxxsrc/asxxxx.h, as/asxxsrc/aslex.c,
	  as/asxxsrc/asnoice.c, as/asxxsrc/assubr.c, as/asxxsrc/assym.c,
	  as/hc08/asexpr.c, as/hc08/aslist.c, as/hc08/asmain.c,
	  as/hc08/asout.c, as/hc08/m08adr.c, as/hc08/m08ext.c,
	  as/hc08/m08mch.c, as/hc08/m08pst.c, as/mcs51/asexpr.c,
	  as/mcs51/aslist.c, as/mcs51/asmain.c, as/mcs51/asout.c,
	  as/mcs51/i51adr.c, as/mcs51/i51ext.c, as/mcs51/i51mch.c,
	  as/mcs51/i51pst.c, as/z80/asexpr.c, as/z80/aslist.c,
	  as/z80/asmain.c, as/z80/asout.c, as/z80/z80adr.c,
	  as/z80/z80ext.c, as/z80/z80mch.c, as/z80/z80pst.c,
	  as/hc08/as_hc08.dsp, as/mcs51/asx8051.dsp, as/z80/as_gbz80.dsp,
	  as/z80/as_z80.dsp,
	  as/hc08/Makefile.in, as/mcs51/Makefile.in, as/z80/Makefile.in:
	  as/mcs51/asdata.c moved to as/asxxsrc/asdata.c,
	  as/mcs51/asm.h moved to as/asxxsrc/asxxxx.h
	* as/hc08/asdata.c, as/mcs51/asdata.c, as/z80/asdata.c,
	  as/hc08/asm.h, as/mcs51/asm.h, as/z80/asm.h: removed

2009-08-10 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/assubr.c, as/hc08/asm.h, as/hc08/asmain.c,
	  as/mcs51/asm.h, as/mcs51/asmain.c, as/z80/asm.h:
	  increnemt aserr only on fatal errors

2009-08-09 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/assubr.c: moved and mergerd from as/mcs51/assubr.c
	  as/hc08/assubr.c, as/mcs51/assubr.c, as/z80/assubr.c: deleted
	  as/hc08/asmain.c, as/mcs51/asmain.c: removed variable fatalError
	* as/z80/as_gbz80.dsp, as/hc08/as_hc08.dsp,